tests/invalid/ho_unique_error.err_exp
ho_unique_error.m:007: In `call_ho(di, uo)':
ho_unique_error.m:007:   error: invalid determinism for a predicate with I/O
ho_unique_error.m:007:   state arguments.
ho_unique_error.m:012: In clause for `call_ho(di, uo)':
ho_unique_error.m:012:   in argument 3 (i.e. argument 2 of the called
ho_unique_error.m:012:   predicate) of higher-order predicate call:
ho_unique_error.m:012:   mode error: variable `DCG_0' has instantiatedness
ho_unique_error.m:012:   `mostly_unique',
ho_unique_error.m:012:   expected instantiatedness was `unique'.
